# openapi.yaml
@@ -83,14 +83,33 @@ paths:
         required: true
         schema:
           type: string
-          # add enums
+          enum:
+            - Skin Off
+            - Skin On
+            - N/A
       - name: meatCondition
         in: query
         description: Meat Condition
         required: true
         schema:
           type: string
-          # add enums
+          enum:
+            - Boning room meat hygiene
+            - Carcase E.coli
+            - Carcase aerobic plate count
+            - Carcase coliform
+            - Carton meat E.coli
+            - Carton meat STEC
+            - Carton meat aerobic plate count
+            - Carton meat coliform
+            - Carton meat contamination
+            - Carton meat manufacturing defect
+            - Carton meat pathology
+            - Establishment contact surface hygiene
+            - Establishment personal hygiene
+            - Offal meat hygiene
+            - Salmonella
+            - Slaughter floor meat hygiene
       - name: species
         in: query
         description: End date for the report
@@ -226,10 +245,39 @@ components:
     Species:
       type: string
       enum:
-        - 'N/A'
-        - 'Pigs'
-        - 'Orvine'
-        - 'Cattle'
-        - 'Calves'
-        - 'Goats'
-        - 'Beef'
+        - Buffalo
+        - Calf
+        - Calves
+        - Camels
+        - Cattle
+        - Cow/Bull
+        - Deer
+        - Donkey
+        - Emu
+        - Game Deer
+        - Game Kangaroo
+        - Game Pig
+        - Game Pigs
+        - Game Rabbits
+        - Goat
+        - Goats
+        - Hares
+        - Horses
+        - Kangaroo
+        - Lamb
+        - Macropod
+        - N/A
+        - Ostriches
+        - Other
+        - Ovine
+        - Pig
+        - Pigs
+        - Possums
+        - Poultry
+        - RTE Products
+        - Rabbits
+        - Ratite
+        - Sheep
+        - Steer/Heifer
+        - Tripe
+        - Wild Boar
